karl package Changelog
======================

Unreleased
----------

- The statistics option is now hidden in the admin UI if no statistics have
  been generated yet.  (LP #821204)

3.69 (2011-08-04)
-----------------

- Add in tagusers.html view for profiles

- HTML is now stripped from wiki links for the purposes of generating a title.
  (LP #811107)

- Hook up the `generate_stats` script for use with karlserve. (LP #812444)

- Added onChange handlers for the author and tags fields on the search results
  page to automatically submit their respective forms.  (LP #784257)

- Added versioning and trash folder for Wiki Pages using Shane's 'repozitory'.
  Merged from 'branches/rossi_repozitory'.

- Fixed UnicodeDecodeError encountered while reindexing text data on staging.
  Made improvements to the text from html extracter.

- Default to active view for /communities

- Modify advanced button text on blog page to read "Advanced" instead of
  "Administer". (LP #820547)

- Fix layout issue on community search results page (LP #820523)

- Update jquery.timeago to 0.9.3 to resolve NaN date issues (LP #821014)

3.68 (2011-07-14)
-----------------

- Made agility use simplejson instead of the stdlib json module for
  compatability with Python 2.5.  simplejson is already in use elsewhere in
  the application.

- Fixed bug where replacing a file via the Edit File form would fail to check
  if a file changed from an image file to a non-image file or vice versa.
  (LP #807478)

- Mailed in content now gets a created timestamp set from the Date header of
  the incoming email instead of the current time. (LP #806066)

- Scrubbed the double parentheses from wiki links in search results for wiki
  pages.  (LP #809969)

- Fixed ie7 issue where adding in (un)ordered lists in tinymce was broken.

- Display custom search results based on content type (LP #792333)

3.67 (2011-06-30)
-----------------

- On file view, show last modified user and time also.
